# vs_cmakeuserpresets_include_intellisense

./: .gitignore  CMakeLists.txt  CMakePresets.json
test_filesystem/: CMakeLists.txt  test_filesystem.cpp  test_filesystem.h
